# ensf

./: .gitignore  README.md  explanation.md  implementation.md  implementation.tex  pyproject.toml
src/ensf/: __init__.py  cli.py
src/ensf/core/: __init__.py  admin.py  keystore.py  user.py
src/ensf/crypto/: __init__.py  aes.py  capability.py  delegation.py  folder.py  shamir.py
src/ensf/utils/: __init__.py
tests/: test_aes.py  test_capability.py  test_delegation.py  test_folder_encryption.py  test_integration.py  test_shamir.py
